test/programs/good/typechecker/measr_4.lq
initBit :: Qbit -> Bit
initBit q  = measr q
