test/programs/bad/typechecker/measr_4.lq
initBit :: Qbit -> Qbit
initBit q  = measr q
